// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mount function Basic function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos
    </p>
    
            
  </div>
</body>
`;

exports[`Mount function Computed function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        24
      </span>
    </p>
    
            
  </div>
</body>
`;

exports[`Mount function Computed w/ State function 1`] = `
<body>
  <div>
    
                
    <p>
      Hola a todos 
      <span
        class="computed"
      >
        uno
      </span>
    </p>
    
            
  </div>
</body>
`;

exports[`Mount function Computed, State w/ Event function 1`] = `
<body>
  <div>
    
                    
    <p
      id="unique"
    >
      Hola a todos 
      <span
        class="computed"
      >
        10
      </span>
    </p>
    
                
  </div>
</body>
`;

exports[`Mount function Computed, State w/ Event function with Render inside 1`] = `
<body>
  <div>
    
                    
    <p
      id="unique"
    >
      Hola a todos 
      <span
        class="computed"
      >
        10
      </span>
    </p>
    
                    
    <div>
      <div>
        Hola
      </div>
    </div>
    
                    
    <div>
      <div>
        Esto es un componente
      </div>
    </div>
    
                
  </div>
</body>
`;

exports[`Mount function Computed, State, Memo w/ Event and Click function 1`] = `
<body>
  <div>
    
                
    <p
      id="paragraph"
    >
      Hola a todos 
      <span
        class="computed"
      >
        10
      </span>
    </p>
    
                
    <div>
      <div>
        
                
        <p
          id="paragraph-1"
        >
          Hola a todos 
          <span
            class="computed"
          >
            100
          </span>
        </p>
        
            
      </div>
    </div>
    
            
  </div>
</body>
`;

exports[`Routing function Basic Routing 1`] = `
<body>
  <div>
    Hola mundo
  </div>
</body>
`;

exports[`Routing function Basic goTo Routing 1`] = `
<body>
  <div
    id="unique"
  >
    Hola mundo
  </div>
</body>
`;

exports[`Routing function goBack Basic goTo Routing 1`] = `
<body>
  <div
    id="unique"
  >
    Hola mundo
  </div>
</body>
`;

exports[`Routing function goForward Basic goTo Routing 1`] = `
<body>
  <div>
     
    <span
      id="unique-backen"
    >
      GoTo
    </span>
     Mundo
  </div>
</body>
`;
